case-2-notworking/nodejs-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webservice
  labels:
    application: node-redis-example-3
    component: webservice
    app: app-nodejs
spec:
  replicas: 1
  selector:
    matchLabels:
      application: node-redis-example-3
      component: webservice
      # app: app-nodejs
  template:
    metadata:
      labels:
        application: node-redis-example-3
        component: webservice
        redepoly: '1'
              # app: app-nodejs
    spec:
      containers:
      - name: webservice
        image: p*****.ecir.aws/******/******:v5
        
        ports:
        - name: webservice
          containerPort: 8888
          protocol: TCP
