case-2-notworking/nodejs-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webservice
  labels:
    application: node-redis-example-3
    component: webservice
  annotations:
#Important Note:  Need to add health check path annotations in service level if we are planning to use multiple targets in a load balancer
    alb.ingress.kubernetes.io/healthcheck-path: /
spec:
  type: NodePort
  selector:
    application: node-redis-example-3
    component: webservice
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8888
