case-2-notworking/redis-service.yml
apiVersion: v1
kind: Service
metadata:
  name: redis-server 
  labels: 
    application: node-redis-example-3
    component: redis-server
spec:
  selector:
    application: node-redis-example-3
    component: redis-server
  ports:
    - name: http
      protocol: TCP
      port: 6379
      targetPort: 6379
