case-2-notworking/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-cpr-clutser
  annotations:
    alb.ingress.kubernetes.io/subnets: subnet-0aac396b800a70f4f, subnet-0f349f16c441a9ef7, subnet-0f613f7444d6b2bb9
    alb.ingress.kubernetes.io/load-balancer-name: alb-ingress1
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP 
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-interval-seconds: '15'
    alb.ingress.kubernetes.io/healthcheck-timeout-seconds: '5'
    alb.ingress.kubernetes.io/success-codes: '200'
    alb.ingress.kubernetes.io/healthy-threshold-count: '2'
    alb.ingress.kubernetes.io/unhealthy-threshold-count: '2'   
spec:
  ingressClassName: my-aws-ingress-class1   # Ingress Class                       
  rules:
    - http:
        paths:           
          - path: /
            pathType: Prefix
            backend:
              service:
                name: webservice
                port: 
                  number: 80
